last build before

--- a/angular.json
+++ b/angular.json
@@ -29,7 +29,9 @@
             "styles": [
               "src/styles/styles.scss"
             ],
-            "scripts": [],
+            "scripts": [
+              "./platform.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
