--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.803.8",
+    "@angular-devkit/build-angular": "^0.13.0",
     "@angular/animations": "^7.2.15",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "^7.2.15",
@@ -34,7 +34,7 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^8.3.8",
+    "@angular/cli": "7.3.9",
     "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "^7.2.15",
     "@types/jasmine": "~2.8.8",
